--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,11 @@ p {font-size: 16px;}
   100% { left: 110%; opacity: 0; }
 }
 
+iframe {
+	
+	width: 1000px;
+	height: 200px;
+
 .fa {
   padding: 20px;
   font-size: 30px;
